--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nova1751/live2d-api",
-  "version": "1.0.4",
+  "name": "noa-live2dapi",
+  "version": "1.0.0",
   "description": "nova1751自建的live_2d api",
   "main": "index.js",
   "scripts": {
