--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "noa-live2dapi",
-  "version": "1.0.12",
+  "name": "live2dapi-noa",
+  "version": "1.0.0",
   "description": "nova1751自建的live-2d api",
   "main": "index.js",
   "scripts": {
